[package]
name = "rust_cpp_game_jim25"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compat = { version = "0.2.5", optional = true }
bevy = { version = "0.17.3", default-features = false, features = [
  "bevy_state",
  "bevy_log",
  "reflect_auto_register",
]}
bevy_aseprite_ultra = { version = "0.7.0",  optional = true }
lightyear = { git = "https://github.com/cBournhonesque/lightyear.git", branch = "main", features = [
  "interpolation",
  "prediction",
  "replication",
  "webtransport",
  "webtransport_self_signed",
  "webtransport_dangerous_configuration",
  "netcode"
]}
serde = { version = "1.0.228", features = ["derive"] }
sha2 = { version = "0.10", optional = true }

[features]
default = ["client"]
server = [
"async-compat",
"lightyear/server",
"lightyear/interpolation",
"lightyear/prediction",
"lightyear/replication",
"lightyear/input_native",
]
client = [
"bevy/bevy_asset",
"bevy/bevy_render",
"bevy/bevy_pbr",
"bevy/bevy_scene",
"bevy/bevy_core_pipeline",
"bevy/default_font",
"bevy/png",
"bevy/x11",
"bevy/webgl2",
"bevy/bevy_winit",
"bevy/bevy_sprite",
"bevy/bevy_sprite_render",
"bevy/bevy_image",
"bevy/bevy_text",
"bevy/bevy_ui",
"bevy/bevy_ui_render",
"bevy/bevy_window",
"bevy_aseprite_ultra",
"lightyear/interpolation",
"lightyear/prediction",
"lightyear/replication",
"lightyear/input_native",
"sha2"
]
